RESOLVED FIXED14241
SVG <image> with height or width less than 1 fails to render image
https://bugs.webkit.org/show_bug.cgi?id=14241
Summary SVG <image> with height or width less than 1 fails to render image
Jean-Pierre Fiset
Reported 2007-06-20 12:58:37 PDT
SVG <image> tag with height or width less than 1 fails to paint image, regardless if the established viewport is valid through coordinate transformations.
Attachments
external image (13.86 KB, image/png)
2007-06-20 13:01 PDT, Jean-Pierre Fiset
no flags
Test Case (1.39 KB, image/svg+xml)
2007-06-20 13:03 PDT, Jean-Pierre Fiset
no flags
First attempt (68.95 KB, patch)
2007-06-23 02:08 PDT, Rob Buis
mjs: review-
Addressing the current issues (70.71 KB, patch)
2007-06-27 00:51 PDT, Rob Buis
mjs: review+
Jean-Pierre Fiset
Comment 1 2007-06-20 13:01:34 PDT
Created attachment 15142 [details] external image
Jean-Pierre Fiset
Comment 2 2007-06-20 13:03:04 PDT
Created attachment 15143 [details] Test Case
Rob Buis
Comment 3 2007-06-23 02:08:00 PDT
Created attachment 15192 [details] First attempt This is a bit of a hack, but I guess it just can't work using Length. Cheers, Rob.
Maciej Stachowiak
Comment 4 2007-06-26 23:13:44 PDT
Comment on attachment 15192 [details] First attempt You use "2." in some places, I'd prefer "2.0" or "2.0f" as appropriate. Also, this asks for info directly from the element at paint time - I don't think that's right. Such things should be determined at layout time if needed.
Rob Buis
Comment 5 2007-06-27 00:51:01 PDT
Created attachment 15268 [details] Addressing the current issues This patch keeps around 2 float member vars for svg image width/height to work around the int based layout system. Note that now the values are determined at layout time (calcWidth/calcHeight). Cheers, Rob.
Maciej Stachowiak
Comment 6 2007-06-28 01:46:21 PDT
Comment on attachment 15268 [details] Addressing the current issues r=me
Maciej Stachowiak
Comment 7 2007-06-28 01:47:07 PDT
Comment on attachment 15268 [details] Addressing the current issues r=me
Rob Buis
Comment 8 2007-06-28 01:59:38 PDT
Landed in r23849.
Note You need to log in before you can comment on or make changes to this bug.