        Reviewed by Maciej.

http://bugs.webkit.org/show_bug.cgi?id=14241
        SVG <image> with height or width less than 1 fails to render image

        Keep extra member vars to get width/height as floats for accurate
        calculations.



git-svn-id: http://svn.webkit.org/repository/webkit/branches/feature-branch@23849 268f45cc-cd09-0410-ab3c-d52691b4dbfc